# crewai-financial-analyst-crew

./: .gitignore  README.md  pyproject.toml
src/financial_analyst_crew/: __init__.py  crew.py  main.py
src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
src/financial_analyst_crew/tools/: BraveNewsTool.py  BraveSearchTool.py  BraveSearchTools.py  __init__.py
